рефакторинг, добавление логирования
